# TransformerScope

./: .gitignore  Cargo.toml  README.md  requirements.txt
.github/workflows/: environment.yml  python.yml  rust.yml
examples/othelloscope/: calculations.py  linear_probe.pt  main.py  mlp_neuron.html  requirements.txt
src/: board_heatmap.rs  lib.rs  main.rs
static/: style.css
transformer-scope/: Cargo.toml  pyproject.toml
transformer-scope-py/: Cargo.toml  pyproject.toml
transformer-scope-py/src/: lib.rs  python.rs
transformer-scope-server/: Cargo.toml
transformer-scope-server/src/: main.rs  state.rs
transformer-scope/python/transformer_scope/: __init__.py  logit_attribution.py  payload.py
transformer-scope/src/: lib.rs  payload.rs  python.rs  state.rs
transformer-scope/src/data/: mod.rs  neuron_rankings.rs  payload.rs  payload_builder.rs  value.rs  values.rs
transformer-scope/src/html/: board_heatmap.rs  focus_sequences.rs  generate_site.rs  heatmap.rs  index.rs  mod.rs  neuron.rs
transformer-scope/src/html/template/: element.rs  mod.rs  neuron_template.rs  value.rs
transformer-scope/src/python/: mod.rs
