[package]
name = "transformer-scope"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
maud = { version = "0.25.0", features = ["actix-web"] }
ndarray = "0.15.6"
ndarray-npy = "0.8.1"
