[package]
name = "transformer-scope"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "transformer_scope"
crate-type = ["cdylib", "rlib"]

[dependencies]
fs_extra = "1.3.0"
maud = { version = "0.25.0" }
ndarray = "0.15.6"
ndarray-npy = "0.8.1"

pyo3 = { version = "0.18.3", features = ["extension-module"], optional = true }
numpy = { version = "0.18", optional = true }
itertools = "0.10.5"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

[features]
python = ["dep:pyo3", "dep:numpy"]

