[package]
name = "transformer-scope"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "transformer_scope"
crate-type = ["cdylib", "rlib"]

[dependencies]
# File utils
fs_extra = "1.3.0"

# HTML generation
maud = { version = "0.25.0" }

# Arrays
ndarray = { version = "0.15.6", features = ["serde"] }
ndarray-npy = "0.8.1"

# Iterators
itertools = "0.10.5"

# Serialization/deserialization
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
postcard = { version = "1.0.4", features = ["alloc"] }

# Error handling
thiserror = "1.0.40"

# Boilerplate reduction
delegate = "0.9.0"

# Interfacing with Python
pyo3 = { version = "0.18.3", features = ["extension-module"], optional = true }
numpy = { version = "0.18", optional = true }

# SIGINT handling
ctrlc = { version = "3.2.5", optional = true }

[features]
python = ["dep:pyo3", "dep:numpy", "dep:ctrlc"]
